--- a/prototype/app/index.html
+++ b/prototype/app/index.html
@@ -25,8 +25,53 @@
             <h3>Rich Banners</h3>
             <h2>Now In <br> Fastor 4.0</h2>
             <p>build better and faster</p>
-            <div>
-                <a href="btn">READ MORE</a>
+            <div class="banner-action">
+                <a href="#" class="btn btn-primary">READ MORE</a>
+            </div>
+        </div>
+    </div>
+    <div class="categories">
+        <div class="container-fluid p-0">
+            <div class="row no-gutters">
+                <div class="col-4">
+                    <div class="category category-1">
+                        <div class="category-text">
+                            <h3>Women Fashion</h3>
+                            <p><a href="#" class="btn-secondary">MORE</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="category category-2">
+                        <div class="category-text">
+                            <h3>Men<br>Fashion</h3>
+                            <p><a href="#" class="btn-secondary">MORE</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="category category-3">
+                        <div class="category-text">
+                            <h3>Women Fashion</h3>
+                            <p></p><a href="#" class="btn-secondary">MORE</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="lates-products">
+        <div class="container">
+            <h2>Latest Products</h2>
+            <div class="row">
+                <div class="col-3">
+                    <div class="product">
+                        <div class="pro-image"></div>
+                        <div class="pro-detail">
+                            Mac Price button
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
