--- a/prototype/app/index.html
+++ b/prototype/app/index.html
@@ -60,15 +60,63 @@
             </div>
         </div>
     </div>
-    <div class="lates-products">
+    <div class="latest-products">
         <div class="container">
-            <h2>Latest Products</h2>
+            <h2 class="section-title text-center">Latest Products</h2>
             <div class="row">
                 <div class="col-3">
                     <div class="product">
-                        <div class="pro-image"></div>
+                        <div class="pro-image">
+                            <img src="images/product-1.jpg" class="img-fluid" alt="Product Image">
+                        </div>
                         <div class="pro-detail">
-                            Mac Price button
+                            <h4 class="text-center"><a href="#">Mac</a></h4>
+                            <p class="text-center">Price</p class="text-center">
+                            <div class="text-center">
+                                <a href="#" class="btn btn-cart">Add To Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="product">
+                        <div class="pro-image">
+                            <img src="images/product-2.jpg" class="img-fluid" alt="Product Image">
+                        </div>
+                        <div class="pro-detail">
+                            <h4 class="text-center"><a href="#">Mac</a></h4>
+                            <p class="text-center">Price</p class="text-center">
+                            <div class="text-center">
+                                <a href="#" class="btn btn-cart">Add To Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="product">
+                        <div class="pro-image">
+                            <img src="images/product-3.jpg" class="img-fluid" alt="Product Image">
+                        </div>
+                        <div class="pro-detail">
+                            <h4 class="text-center"><a href="#">Mac</a></h4>
+                            <p class="text-center">Price</p class="text-center">
+                            <div class="text-center">
+                                <a href="#" class="btn btn-cart">Add To Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="product">
+                        <div class="pro-image">
+                            <img src="images/product-4.jpg" class="img-fluid" alt="Product Image">
+                        </div>
+                        <div class="pro-detail">
+                            <h4 class="text-center"><a href="#">Mac</a></h4>
+                            <p class="text-center">Price</p class="text-center">
+                            <div class="text-center">
+                                <a href="#" class="btn btn-cart">Add To Cart</a>
+                            </div>
                         </div>
                     </div>
                 </div>
