absolute and icon font concepts

--- a/prototype/app/index.html
+++ b/prototype/app/index.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="icofont/icofont.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Hello, world!</title>
 </head>
@@ -66,28 +67,40 @@
             <div class="row">
                 <div class="col-3">
                     <div class="product">
+                        <div class="pro-highlight pro-varient">NEW</div>
                         <div class="pro-image">
                             <img src="images/product-1.jpg" class="img-fluid" alt="Product Image">
                         </div>
+                        <div class="pro-actions">
+                            <a href="#" class="btn btn-heart"><i class="icofont-heart"></i></a>
+                            <a href="#" class="btn btn-compare"><i class="icofont-stylish-right"></i></a>
+                            <a href="#" class="btn btn-quickview"><i class="icofont-ui-search"></i></a>
+                        </div>
                         <div class="pro-detail">
                             <h4 class="text-center"><a href="#">Mac</a></h4>
-                            <p class="text-center">Price</p class="text-center">
+                            <p class="text-center">Price</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-cart">Add To Cart</a>
+                                <a href="#" class="btn btn-cart"><i class="icofont-ui-cart"></i> Add To Cart</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-3">
                     <div class="product">
+                        <div class="pro-highlight pro-discount">-8%</div>
                         <div class="pro-image">
                             <img src="images/product-2.jpg" class="img-fluid" alt="Product Image">
+                        </div>
+                        <div class="pro-actions">
+                            <a href="#" class="btn btn-heart"><i class="icofont-heart"></i></a>
+                            <a href="#" class="btn btn-compare"><i class="icofont-stylish-right"></i></a>
+                            <a href="#" class="btn btn-quickview"><i class="icofont-ui-search"></i></a>
                         </div>
                         <div class="pro-detail">
                             <h4 class="text-center"><a href="#">Mac</a></h4>
                             <p class="text-center">Price</p class="text-center">
                             <div class="text-center">
-                                <a href="#" class="btn btn-cart">Add To Cart</a>
+                                <a href="#" class="btn btn-cart"><i class="icofont-ui-cart"></i> Add To Cart</a>
                             </div>
                         </div>
                     </div>
@@ -97,11 +110,16 @@
                         <div class="pro-image">
                             <img src="images/product-3.jpg" class="img-fluid" alt="Product Image">
                         </div>
+                        <div class="pro-actions">
+                            <a href="#" class="btn btn-heart"><i class="icofont-heart"></i></a>
+                            <a href="#" class="btn btn-compare"><i class="icofont-stylish-right"></i></a>
+                            <a href="#" class="btn btn-quickview"><i class="icofont-ui-search"></i></a>
+                        </div>
                         <div class="pro-detail">
                             <h4 class="text-center"><a href="#">Mac</a></h4>
                             <p class="text-center">Price</p class="text-center">
                             <div class="text-center">
-                                <a href="#" class="btn btn-cart">Add To Cart</a>
+                                <a href="#" class="btn btn-cart"><i class="icofont-ui-cart"></i> Add To Cart</a>
                             </div>
                         </div>
                     </div>
@@ -110,6 +128,11 @@
                     <div class="product">
                         <div class="pro-image">
                             <img src="images/product-4.jpg" class="img-fluid" alt="Product Image">
+                        </div>
+                        <div class="pro-actions">
+                            <a href="#" class="btn btn-heart"><i class="icofont-heart"></i></a>
+                            <a href="#" class="btn btn-compare"><i class="icofont-stylish-right"></i></a>
+                            <a href="#" class="btn btn-quickview"><i class="icofont-ui-search"></i></a>
                         </div>
                         <div class="pro-detail">
                             <h4 class="text-center"><a href="#">Mac</a></h4>
