--- a/prototype/app/index.html
+++ b/prototype/app/index.html
@@ -146,6 +146,52 @@
             </div>
         </div>
     </div>
+    <div class="blog">
+        <div class="container-fluid">
+            <h3>From the blog</h3>
+            <div class="row">
+                <div class="col-4">
+                    <div class="card blog-card">
+                        <div class="blog-image">
+                            <img src="images/blog-1.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="blog-category"><span>MEN</span> <span>MEN</span></div>
+                        <div class="card-body text-center">
+                            <p class="blog-comments"><span><i class="icofont-comment"></i> 0</span></p>
+                            <p class="card-text">Scotty on May 2019</p>
+                            <h5 class="card-title"><a href="#">Card title</a></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card blog-card">
+                        <div class="blog-image">
+                            <img src="images/blog-1.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="blog-category"><span>MEN</span> <span>MEN</span></div>
+                        <div class="card-body text-center">
+                            <p class="blog-comments"><span><i class="icofont-comment"></i> 0</span></p>
+                            <p class="card-text">Scotty on May 2019</p>
+                            <h5 class="card-title"><a href="#">Card title</a></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card blog-card">
+                        <div class="blog-image">
+                            <img src="images/blog-1.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="blog-category"><span>MEN</span> <span>MEN</span></div>
+                        <div class="card-body text-center">
+                            <p class="blog-comments"><span><i class="icofont-comment"></i> 0</span></p>
+                            <p class="card-text">Scotty on May 2019</p>
+                            <h5 class="card-title"><a href="#">Card title</a></h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
